--- a/404.html
+++ b/404.html
@@ -1,10 +1,28 @@
 ---
 layout: default
-title: "404: Page not found"
-permalink: 404.html
+title: Page Not Found
+description: Sorry – the page you're looking for doesn't exist.
+featured_image: /images/demo/home.jpg
 ---
 
-<div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.</p>
-</div>
+<section class="intro">
+
+	<div class="wrap">
+
+		<h1>Page not found.</h1>
+		<p class="hero__text">Sorry – the page you're looking for doesn't exist.</p>
+
+	</div>
+
+</section>
+
+<section class="single">
+
+	<div class="wrap">
+
+		<p class="hero__text">Perhaps you typed the URL incorrectly, or it may have moved.</p>
+		<p><a href="/" class="button button--large">Back To Home</a></p>
+
+	</div>
+
+</section>
